# model-privacy-attacks

./: .coverage  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  INCIDENT_REPORT.md  LICENSE  README.md  pyproject.toml  requirements.txt  test_navigator.py
.github/workflows/: ci.yml
attack_mapping/: __init__.py  enricher.py  reporter.py
docs/: PRIVACY_CERTIFICATE.md
examples/: REAL_MODEL_FINDINGS.md  llm_mia_demo.py  policy.yaml  real_model_demo.py
src/privacy_attacks/: __init__.py  certify.py  metrics.py
src/privacy_attacks/certification/: __init__.py  adapters.py  blind_baseline.py  certificate.py  cli.py  policy.py  stats.py
src/privacy_attacks/extraction/: __init__.py  extraction_attack.py
src/privacy_attacks/llm_mia/: __init__.py  token_likelihood_mia.py
src/privacy_attacks/membership_inference/: __init__.py  entropy_attack.py  shadow_model_attack.py  threshold_attack.py
src/privacy_attacks/mia/: __init__.py  direct_mia.py  shadow_mia.py
src/privacy_attacks/model_extraction/: __init__.py  boundary_stealing.py
tests/: test_attack_mapping.py  test_certification.py  test_entropy.py  test_extraction.py  test_privacy_attacks.py  test_shadow.py  test_threshold.py
